--- a/sass/mm-theme/base/_header.scss
+++ b/sass/mm-theme/base/_header.scss
@@ -24,6 +24,32 @@
   z-index: 1;
 }
 
+%search-bar {
+  background: #ffffff;
+  border: 1px solid var(--dark-blue);
+  border-radius: 25px;
+  font-weight: var(--extra-bold);
+  font-size: 1.5rem;
+  color: var(--blue);
+  margin-right: 8px;
+  width: 100%;
+  height: 100%;
+
+  &::placeholder {
+    color: var(--blue);
+    // color: var(--dark-blue);
+  }
+}
+
+%search-icon {
+  color: var(--dark-blue);
+  font-size: 2rem;
+
+  &:hover {
+    cursor: pointer;
+  }
+}
+
 .page-header {
   background: url("images/backgrounds/bg-header.png") center no-repeat;
   background-size: cover;
@@ -87,30 +113,12 @@
         display: none;
       }
 
-      #search-icon {
-        color: var(--dark-blue);
-        font-size: 2rem;
-
-        &:hover {
-          cursor: pointer;
-        }
+      .search-icon {
+        @extend %search-icon;
       }
 
       .search-bar {
-        background: #ffffff;
-        border: 1px solid var(--dark-blue);
-        border-radius: 25px;
-        font-weight: var(--extra-bold);
-        font-size: 1.5rem;
-        color: var(--blue);
-        margin-right: 8px;
-        width: 100%;
-        height: 100%;
-
-        &::placeholder {
-          color: var(--blue);
-          // color: var(--dark-blue);
-        }
+        @extend %search-bar;
       }
     }
 
@@ -137,7 +145,7 @@
         li {
           text-align: center;
           margin-bottom: 0;
-          padding: 20px;
+          padding: 16px 20px;
         }
         .active {
           background-color: #fff;
@@ -168,36 +176,97 @@
 }
 
 .menu-mobile {
-  @include list-icon($fa-var-chevron-right);
+  @include list-header-icon($fa-var-chevron-right);
   @extend %menu-on-top;
   color: #fff;
+
+  #display-mobile-menu {
+    display: none;
+  }
+
+  .mobile-search-bar {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 16px;
+
+    .search-bar {
+      @extend %search-bar;
+    }
+
+    .search-icon {
+      @extend %search-icon;
+    }
+  }
 
   .menu-item {
     background-color: var(--blue);
     border-bottom: 1px solid #fff;
     margin: 0;
-
-    &:nth-child(n) {
-      padding: 16px 10px 0;
-    }
+    padding: 16px;
+    max-width: 100%;
 
     a {
+      display: block;
       color: inherit;
-      padding: 16px 10px;
+      text-decoration: none;
+      text-transform: uppercase;
+      padding-left: 9px;
+      font-size: 1.5rem;
+      font-weight: var(--extra-bold);
+    }
+
+    &.menu-item-has-children {
+      padding-bottom: 0;
+      & > a {
+        padding-bottom: 16px;
+        padding-top: 2px;
+      }
     }
 
     .sub-menu {
       display: none;
       background-color: #fff;
+      width: 100vw;
+      margin-left: -16px;
+      padding: 16px 0;
+
       li {
         color: var(--red);
-        border-bottom: 1px solid var(--orange);
         background-color: #fff;
-        @include padding-y(12px);
+        padding: 12px;
+        padding-left: 32px;
 
-        // a {
-        //   color: red;
-        // }
+        &::before {
+          padding-left: 16px;
+          line-height: 1.8rem;
+        }
+
+        &:first-child {
+          padding-top: 0;
+        }
+        
+        &:last-child {
+          padding-bottom: 0;
+        }
+
+        &:not(:last-child) {
+          padding-bottom: 0;
+          &::after {
+            content: ""; /* This is necessary for the pseudo element to work. */
+            display: block; /* This will put the pseudo element on its own line. */
+            margin: 0 auto; /* This will center the border. */
+            margin-left: -6px;
+            width: calc(100vw - 52px);
+            padding-top: 12px; /* This creates some space between the element and the border. */
+            border-bottom: 1px solid var(--orange);
+          }
+        }
+
+        a {
+          font-weight: var(--semi-bold);
+          line-height: 1.8rem;
+        }
       }
     }
   }
