refact: code cleanup

--- a/sass/mm-theme/pages/_front-page.scss
+++ b/sass/mm-theme/pages/_front-page.scss
@@ -44,6 +44,10 @@
 
   .section-intro {
     margin-bottom: 64px;
+
+    h1 {
+      margin-bottom: 40px;
+    }
     .side-article {
       font-weight: var(--bold);
 
