--- a/sass/mm-theme/base/_banner.scss
+++ b/sass/mm-theme/base/_banner.scss
@@ -35,6 +35,7 @@
         color: #fff;
         margin-bottom: 24px;
         font-size: 4rem;
+        text-shadow: 0 0 4px rgba(0,0,0,0.3);
       }
     }
   }
@@ -88,7 +89,11 @@
 
     #breadcrumbs {
       color: #fff;
-      font-size: 1.6rem;
+      font-size: 1.2rem;
+
+      @include desktop {
+        font-size: 1.6rem;
+      }
 
       &:first-child {
         font-weight: var(--extra-bold);
@@ -96,12 +101,17 @@
 
       i {
         color: var(--dark-blue);
-        font-size: 1.4rem;
+        font-size: 1.2rem;
+        line-height: 15px;
+        @include desktop {
+          font-size: 1.4rem;
+        }
       }
 
       a {
         text-decoration: underline;
         font-weight: var(--semi-bold);
+        line-height: 15px;
         @include padding-x(8px);
       }
 
