--- a/sass/mm-theme/base/_header.scss
+++ b/sass/mm-theme/base/_header.scss
@@ -126,6 +126,10 @@
       text-transform: uppercase;
       width: 100%;
 
+      ul {
+        margin-right: -15.5px;
+      }
+
       a {
         @extend %header-item;
 
@@ -136,16 +140,15 @@
 
       #menu-desktop {
         display: flex;
-        justify-content: space-between;
+        justify-content: flex-end;
         align-items: center;
         list-style: none;
-
         @include margin-y(0);
 
         li {
           text-align: center;
           margin-bottom: 0;
-          padding: 16px 20px;
+          padding: 15.5px 20px;
         }
         .active {
           background-color: #fff;
