--- a/sass/mm-theme/base/_header.scss
+++ b/sass/mm-theme/base/_header.scss
@@ -203,7 +203,6 @@
   }
 
   .menu-item {
-    background-color: var(--blue);
     border-bottom: 1px solid #fff;
     margin: 0;
     padding: 16px;
@@ -235,7 +234,6 @@
       padding: 16px 0;
 
       li {
-        color: var(--red);
         background-color: #fff;
         padding: 12px;
         padding-left: 32px;
@@ -256,13 +254,12 @@
         &:not(:last-child) {
           padding-bottom: 0;
           &::after {
-            content: ""; /* This is necessary for the pseudo element to work. */
-            display: block; /* This will put the pseudo element on its own line. */
-            margin: 0 auto; /* This will center the border. */
+            content: "";
+            display: block;
+            margin: 0 auto;
             margin-left: -6px;
             width: calc(100vw - 52px);
-            padding-top: 12px; /* This creates some space between the element and the border. */
-            border-bottom: 1px solid var(--orange);
+            padding-top: 12px;
           }
         }
 
