--- a/sass/mm-theme/pages/_front-page.scss
+++ b/sass/mm-theme/pages/_front-page.scss
@@ -111,13 +111,16 @@
         }
       }
 
-      .mascot-hr-blue {
+      .mascot-hr-blue,
+      .mascot-hr-general {
         @include mascot-hr(var(--blue));
       }
-      .mascot-hr-red {
+      .mascot-hr-red,
+      .mascot-hr-resources {
         @include mascot-hr(var(--orange));
       }
-      .mascot-hr-green {
+      .mascot-hr-green,
+      .mascot-hr-training {
         @include mascot-hr(var(--green));
       }
 
