--- a/sass/style.scss
+++ b/sass/style.scss
@@ -75,6 +75,7 @@ $fa-font-path: "fonts/fontawesome/webfonts";
 @import 'mm-theme/mixins/lists';
 @import 'mm-theme/mixins/buttons';
 @import 'mm-theme/mixins/cards';
+@import 'mm-theme/mixins/headers';
 
 /*--------------------------------------------------------------
 # General Styles
