--- a/sass/mm-theme/base/_footer.scss
+++ b/sass/mm-theme/base/_footer.scss
@@ -5,7 +5,11 @@
 .footer {
   width: 100%;
   font-size: 1.4rem;
-  @include margin-tb(5rem, 3.3rem);
+  padding: 3.3rem 0;
+
+  @include desktop {
+    margin-top: 7.2rem;
+  }
 
   a,
   p {
