--- a/sass/mm-theme/pages/_single.scss
+++ b/sass/mm-theme/pages/_single.scss
@@ -1,9 +1,3 @@
 /*--------------------------------------------------------------
-#  Privacy Policy Page
+# Single Page
 --------------------------------------------------------------*/
-
-#privacy-policy-template {
- a{
-     color: #0075BD;
- }
-}
