--- a/sass/mm-theme/pages/_sitemap.scss
+++ b/sass/mm-theme/pages/_sitemap.scss
@@ -1,5 +1,9 @@
 /*--------------------------------------------------------------
-# Single Page
+#  Sitemap Page Template
 --------------------------------------------------------------*/
 
-
+#sitemap-template {
+  a {
+    color: #0075bd;
+  }
+}
