--- a/sass/mm-theme/mixins/_buttons.scss
+++ b/sass/mm-theme/mixins/_buttons.scss
@@ -2,12 +2,20 @@
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 
 %mm-btn {
+  cursor: pointer;
   text-transform: uppercase;
+  text-decoration: none;
+  font-weight: var(--extra-bold);
+  font-size: 1.5rem;
   color: #fff;
   border-radius: 25px;
   border: none;
   padding: 14px 26px;
   margin: 0;
+
+  &:hover {
+    color: #fff;
+  }
 }
 
 .btn-dark-blue {
