--- a/sass/style.scss
+++ b/sass/style.scss
@@ -95,10 +95,16 @@ $fa-font-path: "fonts/fontawesome/webfonts";
 # Pages
 --------------------------------------------------------------*/
 @import 'mm-theme/pages/front-page';
-@import 'mm-theme/pages/single-page';
-@import 'mm-theme/pages/content-page';
-@import 'mm-theme/pages/privacy-policy-page';
+@import 'mm-theme/pages/page';
+@import 'mm-theme/pages/single';
+@import 'mm-theme/pages/privacy-policy';
+@import 'mm-theme/pages/sitemap';
 @import 'mm-theme/pages/404';
+
+/*--------------------------------------------------------------
+# Template Parts
+--------------------------------------------------------------*/
+// @import 'mm-theme/template-parts/content-page';
 
 /*--------------------------------------------------------------
 # Footer
