--- a/sass/mm-theme/base/_forms.scss
+++ b/sass/mm-theme/base/_forms.scss
@@ -29,7 +29,7 @@ input[type='url']:focus,
 input[type='password']:focus,
 textarea:focus,
 select:focus {
-  border: 1px solid var(--orange);
+  border: 1px solid var(--blue);
   outline: 0;
 }
 
