--- a/sass/mm-theme/pages/_front-page.scss
+++ b/sass/mm-theme/pages/_front-page.scss
@@ -94,5 +94,21 @@
     h1 {
       @include margin-tb(32px, 16px);
     }
+
+    .card__header {
+      img {
+        height: 220px;
+        object-fit: cover;
+      }
+    }
+
+    @include mobile-only {
+      .card__header {
+        img {
+          height: 50vw;
+          object-fit: cover;
+        }
+      }
+    }
   }
 }
