--- a/sass/mm-theme/base/_header.scss
+++ b/sass/mm-theme/base/_header.scss
@@ -8,7 +8,7 @@
   padding-top: 4px;
 
   @include desktop {
-    padding: 14px 40px 0 36px;
+    padding: 8px 36px 0;
   }
 
   &::after {
@@ -100,8 +100,8 @@
 
         li {
           text-align: center;
-          margin-bottom: 0;
-          padding: 15.5px 20px;
+          margin: 0;
+          padding: 15px;
         }
         .active {
           background-color: #fff;
