style: adjust songs playlist

--- a/sass/mm-theme/mixins/_helpers.scss
+++ b/sass/mm-theme/mixins/_helpers.scss
@@ -43,3 +43,22 @@
   padding-top: $pt;
   padding-bottom: $pb;
 }
+
+.text-center {
+  text-align: center;
+}
+
+.text-left {
+  text-align: left;
+}
+
+.text-right {
+  text-align: right;
+}
+
+.float-left {
+  float: left;
+}
+.float-right {
+  float: right;
+}
