--- a/sass/mm-theme/base/_typography.scss
+++ b/sass/mm-theme/base/_typography.scss
@@ -57,6 +57,10 @@ p {
   font-size: 1.5rem;
 }
 
+a {
+  font-size: 1.5rem;
+}
+
 /* Larger than tablet */
 @media (min-width: 550px) {
   h1 {
@@ -77,7 +81,8 @@ p {
   h6 {
     font-size: 1.5rem;
   }
-  p {
+  p,
+  a {
     font-size: 1.9rem;
   }
 }
