--- a/sass/mm-theme/base/_forms.scss
+++ b/sass/mm-theme/base/_forms.scss
@@ -37,7 +37,8 @@ select:focus {
   align-self: flex-end;
 }
 
-// WP CONTACT FORM 7
+/* WP Contact Form 7
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
 .wpcf7-response-output {
   height: 61px;
   border-radius: 16px;
