--- a/sass/mm-theme/mixins/_cards.scss
+++ b/sass/mm-theme/mixins/_cards.scss
@@ -1,10 +1,34 @@
 /* Cards
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 
+.cards {
+  margin: 32px 0;
+
+  @include desktop {
+    margin: 40px 0 56px 0;
+  }
+
+  &__heading {
+    margin: 56px 0 32px 0;
+  }
+}
+
 @mixin mm-card($primaryColor, $secondaryColor) {
   @extend %flex-column-grow;
 
   .card {
+    &__heading {
+      margin-bottom: 8px;
+
+      &:not(:first-child) {
+        margin-top: 16px;
+      }
+
+      @include desktop {
+        margin-bottom: 32px;
+      }
+    }
+
     &__header {
       line-height: 0;
       border-bottom: 12px solid $secondaryColor;
@@ -12,8 +36,10 @@
         width: 100%;
       }
     }
+
     &__content {
       @extend %flex-column-grow;
+      justify-content: space-between;
       padding: 24px 16px 32px;
       background-color: $primaryColor;
       color: #fff;
@@ -55,18 +81,6 @@
   @include mm-card(var(--red), var(--orange));
 }
 
-.cards {
-  margin: 32px 0;
-
-  @include desktop {
-    margin: 40px 0 56px 0;
-  }
-
-  .card__content {
-    justify-content: space-between;
-  }
-}
-
 /* Video
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 video {
@@ -84,9 +98,9 @@ video {
   height: auto;
   margin-top: 10px;
 
-  @include desktop {
-    margin-top: 30px;
-  }
+  // @include desktop {
+  //   margin-top: 30px;
+  // }
 }
 
 .embed-container iframe,
