feature: add sitemap

--- a/sass/mm-theme/mixins/_headers.scss
+++ b/sass/mm-theme/mixins/_headers.scss
@@ -8,7 +8,7 @@
   border: 0;
   border-radius: 0;
   color: #fff;
-  text-shadow: 0 1px 3px var(--green-shadow);
+  text-shadow: 0 1px 3px #589429;
   font-size: 1.6rem;
   font-weight: var(--black);
   box-shadow: none;
