style: fix search bar

--- a/sass/mm-theme/base/_forms.scss
+++ b/sass/mm-theme/base/_forms.scss
@@ -14,6 +14,7 @@ select {
   font-size: 2rem;
   padding: 11px 17px;
   max-width: 100%;
+  border-radius: 25px;
 
   &::placeholder {
     font-weight: var(--extra-bold);
