--- a/sass/mm-theme/pages/_page.scss
+++ b/sass/mm-theme/pages/_page.scss
@@ -21,6 +21,10 @@
 
 // Defaults for the content that will be added by the user
 .mm-content {
+  p > img {
+    object-fit: cover;
+  }
+
   hr {
     border: 1px solid var(--blue);
   }
@@ -46,7 +50,7 @@
   li {
     font-size: 1.5rem;
 
-    @include desktop {
+    @include phablet {
       font-size: 1.9rem;
     }
   }
@@ -220,11 +224,6 @@
     }
   }
 
-  .search-field {
-    // width: 80%;
-    @extend %search-bar;
-  }
-
   .search-submit {
     @extend .btn-general;
   }
@@ -240,10 +239,8 @@
   border: none;
   outline: none;
   transition: 0.4s;
-  font-size: 1.9rem;
   font-weight: var(--bold);
   color: var(--dark-blue);
-  background-color: #fff;
   border-radius: 0;
   border-bottom: 3px solid var(--dark-blue);
   display: flex;
@@ -261,17 +258,20 @@
   &.active::after {
     content: fa-content($fa-var-minus);
   }
+
+  @include phablet {
+    font-size: 1.9rem;
+  }
 }
 
 .panel {
   display: none;
-  padding: 16px;
+  padding: 16px 16px 0;
   overflow: hidden;
   transition: max-height 0.2s ease-out;
   color: var(--blue);
 
   ul {
-    
     li::before {
       content: "";
     }
@@ -282,6 +282,39 @@
       color: var(--blue);
       text-decoration: none;
       font-weight: var(--bold);
+    }
+  }
+}
+
+/* Search Template
+      tpl-search.php
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+#search-template {
+  .search-form {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+
+    h4 {
+      color: var(--dark-blue);
+      margin-bottom: 24px;
+    }
+    &__content {
+      display: flex;
+      .search-bar {
+        width: 80%;
+        @extend %search-bar;
+      }
+    }
+  }
+
+  .search-results {
+    margin-top: 56px;
+    padding-top: 56px;
+    border-top: 3px solid var(--dark-blue);
+
+    h2 {
+      padding: 32px 0 24px;
     }
   }
 }
